--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
         // document.getElementById('message').textContent = "Login successful!";
        alert("Login successful!\nWelcome " + userCredential.user.email);
-      window.open("https://prolouies888.github.io/course/18301.html");  
+      window.open("https://sites.google.com/view/learnlytech/home");  
 
       } catch (error) {
         document.getElementById('message').textContent = `Error: ${error.message}`;
